fixed form styling/spacing, added placeholder text, and fixed submit button styling/spacing

--- a/css/contact-style.css
+++ b/css/contact-style.css
@@ -11,11 +11,6 @@ body {
     padding: 0;
 }
 
-p {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-
-}
-
 h1 {
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: #ffffff;
@@ -67,7 +62,7 @@ p {
 
 .menulinks:hover {
     background-color: #38807C;
-    color: #ffffff;background-color: #38807C;
+    color: #ffffff;
 }
 
 .links {
@@ -104,17 +99,42 @@ p {
     border-width: 2px;
     border-style: solid;
     padding-top: 20px;
+    margin-bottom: 80px;
 }
 
-#headshot {
-    float: left;
-    margin-right: 20px;
-    margin-bottom: 20px;
+form {
+    padding-top: 20px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
 }
 
-.bottomborder {
+input {
+    padding: 10px;
+    width: 100%;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.messagebox {
+    padding-bottom: 150px;
+
+}
+
+.submitbutton {
     background-color: #4aaaa5;
-    height: 7px;
+    color: #ffffff;
+    text-align: center;
+    width: 150px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 20px;
+}
+
+.submitbutton:hover {
+    background-color: #38807C;
 }
 
 footer {
